--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3859,7 +3859,7 @@ MoE架构：
 
 ![](../assets/qwen3-chat-template.png)
 
-+ thinking预算：一旦模型学会了在non-thinking和thinking模式进行回复时，自发地产生了一种能力：能够基于不完整的thiking来产出结果。这也是实现thinking预算控制的基础。当thiking的长度达到一个用户定义的阈值后，会手动停止thking模式，并插入一个instrunction：```Considering the limited time by the user, I have to give the solution based on the thinking directly now.\n</think>.\n\n```，然后模型就会自己输出回答了。这个能力并非显式训练得到的，而是涌现出来的？。。
++ thinking预算：一旦模型学会了在non-thinking和thinking模式进行回复时，自发地产生了一种能力：能够基于不完整的thiking来产出结果。这也是实现thinking预算控制的基础。当thiking的长度达到一个用户定义的阈值后，会手动停止thking模式，并插入一个instrunction：```Considering the limited time by the user, I have to give the solution based on the thinking directly now.\n</think>.\n\n```，然后模型就会自己输出回答了。值得注意的是，这种能力并非通过显式训练获得，而是应用思考模式融合后自然涌现出的结果。
 
 [https://muellerzr.github.io/til/end_thinking.html](https://muellerzr.github.io/til/end_thinking.html)
 
@@ -3869,13 +3869,28 @@ MoE架构：
 
 &nbsp;
 
-在包括指令遵循、格式遵循和Agent能力等在内的20多个通用领域的任务上应用了强化学习，以进一步增强模型的通用能力并纠正不良行为。
+建立了一个复杂的奖励系统，覆盖超过20种不同的任务，每项任务都配有定制化的评分标准。提升如下几个能力：
+
++ 指令遵循：模型准确地解释并遵循用户指令，包括内容、格式、长度、结构化输出等，与用户预期对齐
++ 模版遵循：遵循特定的格式要求，例如thinking和non-thinking模式、用设计好的token（```<think>```和```</think>```）来区分thinking和回复
++ 偏好对齐：对于开放性的问题，提升模型的helpfulness、engagement和style，提供更自然和令人满意的用户体验
++ Agent能力：工具调用，在rl rollout期间，模型能够与真实环境进行完整的多轮交互，并且得到执行反馈，从而提升long-horizon决策任务上的性能和稳定性
++ 特殊场景能力：例如RAG任务，设计reward，鼓励产生准确且符合上下文的答案，从而减小幻觉的风险
+
+3种奖励机制：
+
++ 基于规则的奖励：有助于产出高准确率的答案，缓解reward hacking
++ 带参考答案的基于模型的奖励（Model-based Reward with Reference Answer）：对每个query给出一个参考答案，并用Qwen2.5-72B-Instruct基于这个参考答案对模型输出进行打分。相比规则reward更灵活，且能支持更多样的任务。
++ 不带参考答案的基于模型的奖励：利用人类偏好数据，训练一个reward model，对模型回答输出一个scalar。能够适用于更多类型的query。
 
 #### strong-to-weak蒸馏
 
 &nbsp;
 
+包括5个密集模型（Qwen3-0.6B、1.7B、4B、8B和14B）以及一个MoE模型（Qwen3-30B-A3B），蒸馏过程主要分为两个阶段：
 
++ **Off-policy蒸馏(即teacher产出样本)**：结合教师模型在 ```/think```和```/no_think```两种模式下生成的输出，用于对学生模型进行回应蒸馏。有助于轻量级学生模型掌握基本的推理能力，并学会在不同思考模式之间切换。
++ **On-policy蒸馏（即student产出样本）**：学生模型基于**当前策略**生成回应序列用于微调。我们对提示词进行采样，学生模型以 `/think` 或 `/no_think` 模式生成回应。随后，通过将其输出logits与教师模型（Qwen3-32B或Qwen3-235B-A22B）对齐，最小化两者之间的KL散度，从而对学生模型进行微调。
 
 ### 使用
 
