--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3769,7 +3769,7 @@ dense架构和Qwen2.5类似，
 
 + 有GQA、SwiGLU、Rope和pre-normalization的RMSNorm等，
 + 删掉了Qwen2中的QKV-bias
-+ 引入QK-Nomr，保证训练稳定
++ 引入QK-Norm，保证训练稳定
 
 MoE架构：
 
