--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -4383,3 +4383,17 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 + 给定一张图片和一个问题，模型生成多个候选回答；
 + 使用多数投票选出出现频率最高的回答，作为当前输入的「伪标签」；
 + 使用这个「伪标签」来计算 reward，引导模型根据 GRPO 策略更新；
+
+## SEAL
+
+[LLM已能自我更新权重，自适应、知识整合能力大幅提升，AI醒了？](https://mp.weixin.qq.com/s/WvC7kX1_XfNO218YBsAa8g)
+
+[Self-Adapting Language Models](https://arxiv.org/pdf/2506.10943)
+
+[https://github.com/Continual-Intelligence/SEAL](https://github.com/Continual-Intelligence/SEAL)
+
+一个包含两个嵌套循环的算法：
+
++ 外部RL循环：生成候选的自编辑(self edit, SE)
++ 内部更新循环：使用生成的自编辑通过梯度下降更新模型
+
