--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1393,6 +1393,12 @@ colossalai run --hostfile path-to-host-file --nprocpernode 8 \
 
 [https://github.com/zhu-minjun/Researcher](https://github.com/zhu-minjun/Researcher)
 
+## Anthropic的research
+
+[Anthropic：我们如何构建多智能体研究系统](https://mp.weixin.qq.com/s/g6M2KXTpYM8-HTcRnzypNA)
+
+[https://www.anthropic.com/engineering/built-multi-agent-research-system](https://www.anthropic.com/engineering/built-multi-agent-research-system)
+
 # 高效reasoning
 
 ## reasoning economy
