--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -63,6 +63,12 @@
 
 [https://huggingface.co/collections/facebook/v-jepa-2-6841bad8413014e185b497a6](https://huggingface.co/collections/facebook/v-jepa-2-6841bad8413014e185b497a6)
 
+## Agents-world-model
+
+[AGI真方向？谷歌证明：智能体在自研世界模型，世界模型is all You Need](https://mp.weixin.qq.com/s/k-hd-M1XK7fsH2LI80r5AA)
+
+[General agents need world models](https://arxiv.org/abs/2506.01622)
+
 # 语言物理学
 
 (toread)
