--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2343,6 +2343,15 @@ L_v=\frac{1}{M+1} \sum_{t-M}^t\left(\tilde{r}_{t+1}-\hat{V}_{t+1}^{\prime}\right
 $$
 
 
+## 一些tokenizer方法
+
+vq/rq codebook容易坍塌，即马太效应
+lfq的熵损失函数能优化codebook利用率，即所有样本的$$-\sum plogp$$，让xx更尖锐？
+然后有个batch内的熵，让xx更平均？
+两个相减可以提升表示能力的同时提升利用率
+
+alit([Adaptive Length Image Tokenization via Recurrent Allocation](https://arxiv.org/pdf/2411.02393))：简单的图片不用那么多token，复杂的多一点
+
 # LLM+推荐小结
 
 ## 参考LLM建模方式
