--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -1077,3 +1077,13 @@ prompt-lookup decoding：[https://github.com/apoorvumang/prompt-lookup-decoding]
 ## Mirage
 
 [告别CUDA无需Triton！Mirage零门槛生成PyTorch算子，人均GPU编程大师？](https://mp.weixin.qq.com/s/M3WFt17QErAt46VuqkFjFQ)
+
+
+## MPK
+
+[舍弃CUDA编程！CMU等用几十行代码将LLM编译成巨型内核，推理延迟可降6.7倍](https://mp.weixin.qq.com/s/D3fYjn8YksswteQE05Ohbw)
+
+[blog](https://zhihaojia.medium.com/compiling-llms-into-a-megakernel-a-path-to-low-latency-inference-cf7840913c17)
+
+[https://github.com/mirage-project/mirage/tree/mpk](https://github.com/mirage-project/mirage/tree/mpk)
+
