--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2046,7 +2046,7 @@ finetune部分代码的大概逻辑如下：
 
 infer照理说应该是得到emb，然后去ann，但代码里偷懒了直接拿softmax后的1-n的结果
 
-## GPLR
+## GPLR（学术界）SIGIR25
 
 [You Are What You Bought: Generating Customer Personas for E-commerce Applications](https://arxiv.org/abs/2504.17304)
 
@@ -2682,10 +2682,11 @@ def unified_model_forward(model, model_type: str, inputs: dict, normalize_emb: b
 
 [https://github.com/McGill-NLP/llm2vec](https://github.com/McGill-NLP/llm2vec)
 
-+ 由3步组成：
- + Bi-directional：把causal mask干掉，改成全1mask
- + 引入masked next token predtion任务：类似mlm，mask掉中间的词，拿周围的词预测
- + 对比学习simcse：前两步让模型有了bi-directional的能力，把所有词的emb通过pooling（实验表明mean pooling最有效）得到句子表示，同一句话里mask掉几个词的为正例，不同句子为负例，对比学习
+由3步组成：
+
++ Bi-directional：把causal mask干掉，改成全1mask
++ 引入masked next token predtion任务：类似mlm，mask掉中间的词，拿周围的词预测
++ 对比学习simcse：前两步让模型有了bi-directional的能力，把所有词的emb通过pooling（实验表明mean pooling最有效）得到句子表示，同一句话里mask掉几个词的为正例，不同句子为负例，对比学习
 
 ## GDR
 
@@ -2922,3 +2923,36 @@ $$
 参考[Improving general text embedding model: Tackling task conflict and data imbalance through model merging](https://arxiv.org/abs/2410.15035)的slerp，基于球面插值的融合方法，给定2个ckpt，分别算一下和训练前ckpt的差值，称为任务向量。然后拿这2个任务向量和原来ckpt的点构成的平面，使得少量训练数据和一个loss，算出合适的夹角和模长得到新向量，再去和其他ckpt重复这个步骤进行merge。
 
 训练的时候用的lora，emb和rerank的hard negative设计不一样
+
+
+# 传统推荐模型
+
+## Meta的MTMH
+
+[Optimizing Recall or Relevance? A Multi-Task Multi-Head Approach for Item-to-Item Retrieval in Recommendation](https://arxiv.org/pdf/2506.06239) KDD25
+
+![](../assets/mtmh.png)
+
+同时考虑target item与trigger item的相关性和个性化。
+
+多目标loss包括如下两部分：
+
++ 互动loss：正样本是trigger和target的共现，负样本是这个用户没交互过的item，用infoNCE loss
++ 内容相似loss：label是预训练的content encoder的输出向量的内积，和MTMH输出的item内积算一个kl距离
+
+输入item特征，经过MTMH后有2个head：
+
++ head1：只学互动loss，保证模型对高热的召回能力
++ head2：学多目标loss，即同时学互动和内容相似loss
+
+![](../assets/mtmh-serving-content.png)
+
+content encoder的训练：对比学习
+
++ 左边是text encoder（XLM-R-Large-550M）+vision encoder（VIT-H14-632M），只训练上面的mlp，输出是128dim
++ 右边是text encoder，输入concept(感觉是类似类目、tag之类的东西)，同样经过mlp输出128dim
+
+serving：2个head分别建索引，在线同一个trigger分别从这2个索引召回，再merge
+
+
+## 
