--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1399,6 +1399,14 @@ colossalai run --hostfile path-to-host-file --nprocpernode 8 \
 
 [https://www.anthropic.com/engineering/built-multi-agent-research-system](https://www.anthropic.com/engineering/built-multi-agent-research-system)
 
+## Kimi-Researcher
+
+[月之暗面「调教」出最强Agent，在「人类最后一场考试」拿下最新 SOTA](https://mp.weixin.qq.com/s/1ektvvMVp_9z2VGgaK1_bw)
+
+[https://moonshotai.github.io/Kimi-Researcher/](https://moonshotai.github.io/Kimi-Researcher/)
+
+
+
 # 高效reasoning
 
 ## reasoning economy
