--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -977,6 +977,10 @@ Neel Nanda（deepmind）的项目
 
 [Thinking in Space: How Multimodal Large Language Models See, Remember, and Recall Spaces](https://arxiv.org/pdf/2412.14171v1)
 
+## 具身多模态推理
+
+[统一框架下的具身多模态推理：自变量机器人让AI放下海德格尔的锤子](https://mp.weixin.qq.com/s/PAMxpArVFwyAEVOhcq_UAw)
+
 
 # LLM+芯片设计
 
