--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1405,13 +1405,31 @@ colossalai run --hostfile path-to-host-file --nprocpernode 8 \
 
 [https://moonshotai.github.io/Kimi-Researcher/](https://moonshotai.github.io/Kimi-Researcher/)
 
-Kimi–Researcher是一个自主的智能体与思维模型，旨在通过多步规划、推理和工具使用来解决复杂问题。它利用了三个主要工具：
+传统agent开发存在以下几个关键限制：
+
++ 基于工作流的系统：多智能体工作流将角色分配给特定智能体，并使用基于提示的工作流进行协调。但它们依赖于特定的语言模型版本，并且在模型或环境发生变化时需要频繁手动更新，限制了系统的可扩展性和灵活性。
++ 基于SFT的模仿学习(Imitation Learning)：模仿学习能使模型很好地对齐人类演示，但在数据标注方面存在困难，尤其是在具有长时间跨度、动态环境中的智能体任务中。此外，SFT数据集通常与特定工具版本强耦合，导致随着工具的演变，其泛化能力会下降。
+
+端到端的智能体强化学习（agentic RL）训练的是能够**整体性解决问题的单一模型**：给定一个查询，智能体会探索大量可能的策略，通过获得正确解答的奖励进行学习，并从整个决策轨迹中总结经验。挑战如下：
+
++ 动态环境：即使面对相同的查询，环境结果也可能随时间发生变化，智能体必须具备适应不断变化条件的能力。目标是实现对分布变化的鲁棒泛化能力。
++ 长程任务：Kimi–Researcher每条轨迹可执行超过70次搜索查询，使用的上下文窗口长度甚至达数十万token。这对模型的记忆管理能力以及长上下文处理能力提出了极高要求。
++ 数据稀缺：高质量的用于智能体问答的强化学习数据集非常稀缺。通过自动合成训练数据的方式解决这一问题，从而实现无需人工标注的大规模学习。
++ 执行效率：多轮推理和频繁工具调用可能导致训练效率低下，GPU资源利用不足。优化rollout效率是实现可扩展、实用的智能体强化学习训练的关键。
+
+
+是一个自主的智能体与思维模型，旨在通过多步规划、推理和工具使用来解决复杂问题。它利用了三个主要工具：
 
 + 并行的实时**内部搜索**工具
 + 用于**交互式网页任务**的基于文本的**浏览器**工具
 + 用于自动执行代码的**编码**工具
 
+### 训练数据
 
++ 设计了一套具有挑战性的、以工具使用为核心的任务，旨在促进智能体对工具使用的深入学习。这些任务提示被刻意构造为必须调用特定工具才能解决——从而使得简单的策略要么根本无法完成任务，要么效率极低。通过将工具依赖性融入任务设计中，智能体不仅学会了何时调用工具，也学会了在复杂的现实环境中如何高效协同使用多种工具。
++ 策划并整合了一批以推理为核心的任务，旨在强化智能体的核心认知能力，以及其将推理与工具使用结合的能力：
+  + 数学与代码推理：任务聚焦于逻辑推理、算法问题求解和序列计算。不仅依赖思维链进行解题，还能结合工具集解决这类复杂问题。
+  + 高难度搜索：要求智能体在上下文限制下进行多轮搜索、信息整合与推理，最终得出有效答案。案例研究表明，这些高难搜索任务促使模型产生更深层的规划能力，以及更健壮、工具增强的推理策略。
 
 
 # 高效reasoning
