--- a/posts/1.4.llm_sft_and_usages.md
+++ b/posts/1.4.llm_sft_and_usages.md
@@ -464,3 +464,19 @@ Flan-T5和Flan-PaLM（[Scaling instruction-finetuned language models](https://ar
 
 [Chinese SimpleQA: A Chinese Factuality Evaluation for Large Language Models](https://arxiv.org/abs/2411.07140)
 
+# 一些新的方法
+
+## RPT
+
+[「Next-Token」范式改变！刚刚，强化学习预训练来了](https://mp.weixin.qq.com/s/UABVUoHYTDlFWWNvD5R9Og)
+
+[Reinforcement Pre-Training](https://www.arxiv.org/pdf/2506.08007)
+
+## DDO
+
+[ICML 2025 Spotlight | 清华朱军组&NVIDIA提出DDO：扩散/自回归模型训练新范式，刷新图像生成SOTA](https://mp.weixin.qq.com/s/tiytMxR8QJN2fFSry1mQ1w)
+
+[Direct Discriminative Optimization: Your Likelihood-Based Visual Generative Model is Secretly a GAN Discriminator](https://arxiv.org/abs/2503.01103)
+
+[https://github.com/NVlabs/DDO](https://github.com/NVlabs/DDO)
+
