--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -981,12 +981,21 @@ Neel Nanda（deepmind）的项目
 
 [统一框架下的具身多模态推理：自变量机器人让AI放下海德格尔的锤子](https://mp.weixin.qq.com/s/PAMxpArVFwyAEVOhcq_UAw)
 
+## PEVA
+
+[伯克利&Meta面向具身智能的世界模型：让AI通过全身动作「看见」未来](https://mp.weixin.qq.com/s/id_ISbf7wVvk3pl2GCIgWA)
+
+[Whole-Body Conditioned Egocentric Video Prediction](https://arxiv.org/pdf/2506.21552)
+
+[https://dannytran123.github.io/PEVA/](https://dannytran123.github.io/PEVA/)
+
 
 # LLM+芯片设计
 
 [登上Nature的AI芯片设计屡遭质疑，谷歌发文反击，Jeff Dean：质疑者连预训练都没做](https://mp.weixin.qq.com/s/u1NNmulcykGkgZjJb_A-UA)
 
 [That Chip Has Sailed: A Critique of Unfounded Skepticism Around AI for Chip Design](https://arxiv.org/pdf/2411.10053)
+
 
 
 # 其他
