--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -301,7 +301,7 @@ $$L(D)=(\frac{D_c}{D})^{\alpha _D}, {\alpha}_D\sim 0.095,D_c\sim 5.4\times 10^{1
 
 $$L(C)=(\frac{C_c}{C})^{\alpha _C}, {\alpha}_C\sim 0.05,C_c\sim 3.1\times 10^{8}$$
 
-其中，$$N_c$$表示非嵌入参数数量，$$D_c$$表示训练token数量，$$C_c$$表示PF-days，其中$$1 pf-days = 10^15\times 86400=8.64\times 10^19$$浮点数运算。
+其中，$$N_c$$表示非嵌入参数数量，$$D_c$$表示训练token数量，$$C_c$$表示PF-days，其中$$1 PF-days = 10^{15}\times 86400=8.64\times 10^{19}$$浮点数运算。
 
 [Go Wider Instead of Deeper](https://arxiv.org/pdf/2107.11817)说了，transformer效果的提升**不在于计算量的变大**，而应该在于通过**提升模型的hidden dim**来增加模型参数量
 
