--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3133,6 +3133,12 @@ Transformer往往会过度关注不相关的上下文，即注意力噪声（att
 
 将Transformer的点积注意力机制泛化到了三线性形式。
 
+## EBT
+
+[新范式来了！新能量模型打破Transformer++扩展上限，训练扩展率快35%](https://mp.weixin.qq.com/s/7o_zlIldFcFJfKY05bQnhg)
+
+[Energy-Based Transformers are Scalable Learners and Thinkers](https://arxiv.org/pdf/2507.02092)
+
 # Gemmini&Gemma系列
 
 ## Gemini 1.0
