--- a/posts/0.contents.md
+++ b/posts/0.contents.md
@@ -1,15 +1,15 @@
 本网站目录：
 
-+ [llm_aigc](https://www.daiwk.net/1.llm_aigc)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_aigc.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [llm_intro](https://www.daiwk.net/1.2.llm_intro)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_intro.pdf)
-    + [llm_archs](https://www.daiwk.net/1.3.llm_archs)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_archs.pdf)
-    + [llm_sft_and_usages](https://www.daiwk.net/1.4.llm_sft_and_usages)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_sft_and_usages.pdf)
-    + [llm_alignment](https://www.daiwk.net/1.5.llm_alignment)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_alignment.pdf)
-    + [llm_multimodal](https://www.daiwk.net/1.6.llm_multimodal)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_multimodal.pdf)
-    + [llm_recommend](https://www.daiwk.net/1.7.llm_recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_recommend.pdf)
-    + [llm_o1](https://www.daiwk.net/1.8.llm_o1)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_o1.pdf)
-    + [llm_others](https://www.daiwk.net/1.9.llm_others)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_others.pdf)
-+ [recommend](https://www.daiwk.net/2.recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf)
-+ [int-ml](https://www.daiwk.net/8.int-ml)对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/int-ml.pdf)
-+ [collections](https://www.daiwk.net/9.collections)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/collections.pdf)
++ 大模型相关：
+    + 大模型之前的时代：[pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + 大模型介绍：[llm_intro](https://www.daiwk.net/1.2.llm_intro)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_intro.pdf)
+    + 大模型工程架构：[llm_archs](https://www.daiwk.net/1.3.llm_archs)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_archs.pdf)
+    + 大模型的监督微调：[llm_sft_and_usages](https://www.daiwk.net/1.4.llm_sft_and_usages)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_sft_and_usages.pdf)
+    + 大模型的对齐：[llm_alignment](https://www.daiwk.net/1.5.llm_alignment)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_alignment.pdf)
+    + 多模态大模型：[llm_multimodal](https://www.daiwk.net/1.6.llm_multimodal)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_multimodal.pdf)
+    + 大模型与推荐：[llm_recommend](https://www.daiwk.net/1.7.llm_recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_recommend.pdf)
+    + O1类的推理大模型：[llm_o1](https://www.daiwk.net/1.8.llm_o1)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_o1.pdf)
+    + 大模型其他：[llm_others](https://www.daiwk.net/1.9.llm_others)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_others.pdf)
++ 推荐：[recommend](https://www.daiwk.net/2.recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf)
++ 机器学习面试汇总：[int-ml](https://www.daiwk.net/8.int-ml)对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/int-ml.pdf)
++ 之前的一些总结：[collections](https://www.daiwk.net/9.collections)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/collections.pdf)
