--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -4596,9 +4596,34 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 + 外部RL循环：生成候选的自编辑(self edit, SE)
 + 内部更新循环：使用生成的自编辑通过梯度下降更新模型
 
-# 一些奇怪的东西
+# 一些前沿
+
+## Potemkin Understanding
 
 [Gary Marcus惊世之言：纯LLM上构建AGI彻底没了希望！MIT、芝大、哈佛论文火了](https://mp.weixin.qq.com/s/rWvDwEjf-E8faRSSBQmY0Q)
 
 [Potemkin Understanding in Large Language Models](https://arxiv.org/pdf/2506.21521)
 
+## H-Net
+
+[无Tokenizer时代真要来了？Mamba作者再发颠覆性论文，挑战Transformer](https://mp.weixin.qq.com/s/fE5E4mTSaWqZ7rEtsm_Psw)
+
+[Dynamic Chunking for End-to-End Hierarchical Sequence Modeling](https://arxiv.org/abs/2507.07955)
+
+[https://github.com/goombalab/hnet](https://github.com/goombalab/hnet)
+
+![](../assets/h-net.png)
+
+分层架构，假设输入有m个字
+
++ encoder + chunking：其中chunking模块包括两部分
+    + routing module：通过相似度评分预测相邻元素之间的边界，可以理解为把原始输入分成k个词（chunk）
+    + downsampler：基于边界进行下采样，即将每个边界词产出一个向量，共k个
++ 主网络：
++ dechunking + decoder：其中dechunking模块包括两部分：
+    + smoothing module：将离散的chunk转化成插值的表示，用的是指数滑动平均（EMA），所以图里看着有点渐变的那个样子
+    + upsampler：基于边界还原成m个字，用到了ste（Straight-Through Estimator）的技巧来保证训练稳定：
+        + 前向：1和soomthing的输出z相乘
+        + 反向：routing的输出p处理一下得到c（如果是边界那就是p，不是边界就用1-p，所以图中c和p有的一样，有的是“互补”的），和soomthing的输出z来相乘，其实就是保证有连续的梯度
+
+![](../assets/hnet-upsampler.png)
