--- a/posts/0.contents.md
+++ b/posts/0.contents.md
@@ -11,5 +11,6 @@
     + O1类的推理大模型：[llm_o1](https://www.daiwk.net/1.8.llm_o1)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_o1.pdf)
     + 大模型其他：[llm_others](https://www.daiwk.net/1.9.llm_others)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_others.pdf)
 + 推荐：[recommend](https://www.daiwk.net/2.recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf)
++ 大模型+推荐的一些个人总结：[llm_rec_summary](https://www.daiwk.net/3.llm_rec_summary)对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_rec_summary.pdf)
 + 机器学习面试汇总：[int-ml](https://www.daiwk.net/8.int-ml)对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/int-ml.pdf)
 + 之前的一些总结：[collections](https://www.daiwk.net/9.collections)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/collections.pdf)
