--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -916,16 +916,6 @@ item有各种特征，如title、img、id等
 
 [sigir‘25「华为」统一召回+排序框架](https://mp.weixin.qq.com/s/eKU_AlffGR1Lx_wQspuLpQ?poc_token=HEPlGGijUUqAuU1VTCkeSPkWDfZG99B1eN5xtLkh)
 
-## 美团的MTGR（落地）
-
-[MTGR：美团外卖生成式推荐Scaling Law落地实践](https://mp.weixin.qq.com/s/JiDOqD-ThU0Upp6xnNg3Nw)
-
-[推荐算法(2025.5.29)：美团的生成式推荐落地方案](https://mp.weixin.qq.com/s/hQrLSInDnrO5kgCW8I6gCQ)
-
-[MTGR: Industrial-Scale Generative Recommendation Framework in Meituan](https://www.arxiv.org/pdf/2505.18654v2)
-
-听说是替换了精排
-
 ## 阿里的SORT-Gen（落地）
 
 [sigir'25「淘宝」多目标重排｜A Generative Re-ranking Model for List-level](https://mp.weixin.qq.com/s/b0PdyR4bFUXhLj9dToBK5A)
@@ -950,6 +940,51 @@ item有各种特征，如title、img、id等
 
 [「小红书」生成式方案｜Towards Large-scale Generative Ranking](https://mp.weixin.qq.com/s/C4CKr4jfm_f799KCeyFrSw)
 
+## 美团的MTGR（落地）
+
+[MTGR：美团外卖生成式推荐Scaling Law落地实践](https://mp.weixin.qq.com/s/JiDOqD-ThU0Upp6xnNg3Nw)
+
+[推荐算法(2025.5.29)：美团的生成式推荐落地方案](https://mp.weixin.qq.com/s/hQrLSInDnrO5kgCW8I6gCQ)
+
+[MTGR: Industrial-Scale Generative Recommendation Framework in Meituan](https://www.arxiv.org/pdf/2505.18654v2)
+
+听说是替换了精排
+
+传统模型：
+
+![](../assets/mtgr-tradition.png)
+
+其中：
+
++ seq：用户的长期历史序列，静态的
++ rt：用户的实时序列，动态的
++ cross：历史与当前item交叉后的ctr/cvr
+
+![](../assets/mtgr.png)
+
++ 人口属性组成若干个token放在最前面
++ 然后放静态序列seq
++ 然后放rt序列，注意这里是由近及远地排列，即先发生rt2再发生rt1
++ 最后放若干个target（把cross放到candidate里了），也是由近及远地排列
++ 堆叠若干层hstu后得到target1、2、3的预估logit
+
+mask规则（深色是mask，白色可见）：
+
++ 人口属性和静态序列都是可见的
++ rt序列未来的看不到现在的，即rt2看不到rt1
++ 3个target：
+    + 相互之间仅自己可见
+    + 由于发生时间可能夹杂在rt1和rt2之间，所以需要按时间戳来决定它们对rt1和2的mask，例如图中的：
+        + 先有target3：但target3比rt2还早，所以它看不到rt1、rt2
+        + 再有target2：但target2在rt2和rt1之间，所以它看得到rt2，看不到rt1
+        + 最后有target1：且target1发生在rt2和rt1之后，所以它看得以rt2和rt1
+
+总结一下事件的发生顺序：
+
+```python
+seq2->seq1->target3->rt2->target2->rt1->target1
+```
+
 ## 美团的EGA-V1（落地）
 
 [美团UniROM:广告End2End全链路生成式建模范式](https://mp.weixin.qq.com/s/GfuxMwprP5TVSUTBl7Wc6w)
@@ -959,7 +994,6 @@ item有各种特征，如title、img、id等
 ## 美团的EGA-V2（未落地）
 
 [EGA-V2: An End-to-end Generative Framework for Industrial Advertising](https://arxiv.org/abs/2505.17549)
-
 
 
 ## Meta的RPG（没落地）
