--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -940,6 +940,27 @@ item有各种特征，如title、img、id等
 
 [「小红书」生成式方案｜Towards Large-scale Generative Ranking](https://mp.weixin.qq.com/s/C4CKr4jfm_f799KCeyFrSw)
 
+
+![](../assets/genrank.png)
+
++ hstu是item和action当成2个token，输入历史item+action，对于候选item，预估其action
++ genrank把item和action合成一个token（两者的emb相加），输入历史item+action，对于候选item+masked action，预估其action
+
+![](../assets/genrank-mask.png)
+
+mask：target之间互相不可见，但每个target都能看到所有历史
+
+还设计了一些特殊的位置emb，全部加起来，和item emb以及action emb也加起来：
+
++ 位置emb：下标的emb
++ 请求索引：同一时间请求的item用同一个下标表示
++ 请求前时间emb：历史每个item和当前时间的时间差，分桶
+
+另外，这种方式位置Embed和时间Embed是独立设计的, 缺少了两者的交叉，还引入了ALiBi位置编码, 即在注意力计算时, 引入一个常数bias：
+
+![](../assets/alibi.png)
+
+
 ## 美团的MTGR（落地）
 
 [MTGR：美团外卖生成式推荐Scaling Law落地实践](https://mp.weixin.qq.com/s/JiDOqD-ThU0Upp6xnNg3Nw)
