--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -1026,6 +1026,15 @@ Neel Nanda（deepmind）的项目
 [https://github.com/MTU3D/MTU3D](https://github.com/MTU3D/MTU3D)
 
 
+## CoA
+
+[模仿学习新范式，Chain-of-Action：轨迹自回归实现动作推理](https://mp.weixin.qq.com/s/fJXWvpC1s_2FkoUYhnmTCg)
+
+[Chain-of-Action: Trajectory Autoregressive Modeling for Robotic Manipulation](https://arxiv.org/pdf/2506.09990)
+
+[https://github.com/ByteDance-Seed/Chain-of-Action](https://github.com/ByteDance-Seed/Chain-of-Action)
+
+
 # LLM+芯片设计
 
 [登上Nature的AI芯片设计屡遭质疑，谷歌发文反击，Jeff Dean：质疑者连预训练都没做](https://mp.weixin.qq.com/s/u1NNmulcykGkgZjJb_A-UA)
