--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2435,6 +2435,12 @@ $$
 
 实验发现ST&SF和FT&SF效果最好，上线时用的是ST&SF，可以理解为只是用生成式来训了一下sparse emb，然后freeze住
 
+## PinFM
+
+[推荐算法(2025.7.19)：Pinterest出品必是精品——GPT建模行为序列](https://mp.weixin.qq.com/s/APOHCngQR5Dt_o4rNCCMbg)
+
+[PinFM: Foundation Model for User Activity Sequences at a Billion-scale Visual Discovery Platform](https://arxiv.org/pdf/2507.12704)
+
 ## GAVE
 
 [sigir'25「快手」生成式出价-冠军方案｜Generative Auto-Bidding with Value-Guided](https://mp.weixin.qq.com/s/fttTPY6Q30gWaSwcoIpUsA)
