--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2441,6 +2441,44 @@ $$
 
 [PinFM: Foundation Model for User Activity Sequences at a Billion-scale Visual Discovery Platform](https://arxiv.org/pdf/2507.12704)
 
+
+![](../assets/pinfm.png)
+
+### 预训练
+
+两年用户数据，序列最长16k，切成多个小段，每段长度$$L$$是几百。模型用的是带pre-ln的gpt2(decoder only)，也试过hstu，效果类似
+loss：基于info-nce设计了3个loss
+
++ ntl（Next Token Loss）：下一个正样本
++ mtl（Multi Token Loss）：未来$$L'$$个正样本
++ ftl（Future-Token Loss）：最终要用到下游任务里，但那些任务的序列的长度$$L_d$$较短，所以从第$$L_d$$个开始预测mtl
+
+### 微调
+
+有2种融合方式：
+
++ late fusion：基于用户历史序列产出用户emb，和其他特征一起输入精排
++ early fusion：将候选item加到用户序列里，实时产出用户emb，再和其他特征一起输入精排（采用这种方案）
+
+一些技巧：
+
++ 微调时除了精排的二分类loss，可以加入ntl和mtl辅助loss
++ 把pretrain部分的学习率设置为精排的1/10，以保留预训练知识。
++ user序列的输出同样接了网络预估精排目标，这个logit和正常精排的logit算mse来对齐
+
+冷启item优化：
+
++ 10%的概率针对候选item随机选一个id
++ 如果item是最近x天的item，pretrain部分的输出加上dropout
+
+### serving
+
+DCA(Deduplicated Cross-Attention Transformer)：user的历史序列当成context，把每层的kv cache存起来，然后和候选item算cross attention就行了。这里的去重是batch维度的，即一个batch里会有不少同一user的相同序列，只保留一份去算kv cache，然后再还原回去，每条instance去算cross attn。serving时可以理解为就是broadcast
+
+用torchrec来实现分布式的emb table，每个item对应256维emb，拆成8个子向量，每个32dim。用FBGEMM的n-bit min-max量化算子，并加上了ptq量化，把32dim的fp16量化成了32个int8/int4+1个fp16的scale value + 1个fp16的bias value。在int4的情况下，每个vec从512bit压缩到了160bit，降低了31.25%的emb table。
+
+![](../assets/pinfm-serving.png)
+
 ## GAVE
 
 [sigir'25「快手」生成式出价-冠军方案｜Generative Auto-Bidding with Value-Guided](https://mp.weixin.qq.com/s/fttTPY6Q30gWaSwcoIpUsA)
