--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1006,6 +1006,12 @@ mask规则（深色是mask，白色可见）：
 seq2->seq1->target3->rt2->target2->rt1->target1
 ```
 
+## 美团的MTGRBoost
+
+[MTGRBOOST: Boosting Large-scale Generative Recommendation Models in Meituan](https://arxiv.org/pdf/2505.12663)
+
+看着像是MTGR的架构
+
 ## 美团的EGA-V1（落地）
 
 [美团UniROM:广告End2End全链路生成式建模范式](https://mp.weixin.qq.com/s/GfuxMwprP5TVSUTBl7Wc6w)
