--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -524,6 +524,7 @@ class RQBottleneck(nn.Module):
 
 [Enhancing Embedding Representation Stability in Recommendation Systems with Semantic ID](https://arxiv.org/pdf/2504.02137)
 
+Semantic ID prefix ngram
 
 
 ## 受限beam search相关
